[gd_scene load_steps=5 format=3 uid="uid://ccqv1lye27c0l"]

[ext_resource type="Script" path="res://scripts/level_selector.gd" id="1_ntws2"]
[ext_resource type="Texture2D" uid="uid://cgdl3u3tffxhy" path="res://assets/media/background/menu/lsbg.jpg" id="2_qbi01"]
[ext_resource type="FontFile" uid="uid://b2iq6y87f18d5" path="res://assets/fonts/Pixeboy-z8XGD.ttf" id="2_x1je5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vsvi"]
bg_color = Color(0, 0, 0, 0.2)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.890196, 0, 0, 1)
border_blend = true

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntws2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0vsvi")

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer"]
position = Vector2(1034, 589)
scale = Vector2(2.51914, 1.27431)
texture = ExtResource("2_qbi01")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Raws" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 200

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Raws"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = -10
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_x1je5")
theme_override_font_sizes/font_size = 150
text = "LEVELS"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Raws"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Raws/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Lvl1" type="Button" parent="PanelContainer/MarginContainer/Raws/CenterContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_left = NodePath("../Lvl2")
focus_neighbor_top = NodePath("../../../VBoxContainer/Back")
focus_neighbor_right = NodePath("../Lvl2")
focus_neighbor_bottom = NodePath("../../../VBoxContainer/Panorama")
theme_override_fonts/font = ExtResource("2_x1je5")
theme_override_font_sizes/font_size = 128
text = " 1 "

[node name="Lvl2" type="Button" parent="PanelContainer/MarginContainer/Raws/CenterContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_left = NodePath("../Lvl1")
focus_neighbor_top = NodePath("../../../VBoxContainer/Back")
focus_neighbor_right = NodePath("../Lvl1")
focus_neighbor_bottom = NodePath("../../../VBoxContainer/Panorama")
theme_override_fonts/font = ExtResource("2_x1je5")
theme_override_font_sizes/font_size = 128
text = " 2 "

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Raws"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Panorama" type="Button" parent="PanelContainer/MarginContainer/Raws/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../CenterContainer/HBoxContainer/Lvl1")
focus_neighbor_top = NodePath("../../CenterContainer/HBoxContainer/Lvl1")
focus_neighbor_right = NodePath("../../CenterContainer/HBoxContainer/Lvl2")
focus_neighbor_bottom = NodePath("../Back")
theme_override_fonts/font = ExtResource("2_x1je5")
theme_override_font_sizes/font_size = 128
text = " PANORAMA "

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/Raws/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_left = NodePath("../../CenterContainer/HBoxContainer/Lvl2")
focus_neighbor_top = NodePath("../Panorama")
focus_neighbor_right = NodePath("../../CenterContainer/HBoxContainer/Lvl2")
focus_neighbor_bottom = NodePath("../../CenterContainer/HBoxContainer/Lvl2")
theme_override_fonts/font = ExtResource("2_x1je5")
theme_override_font_sizes/font_size = 128
text = " BACK "

[connection signal="pressed" from="PanelContainer/MarginContainer/Raws/CenterContainer/HBoxContainer/Lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Raws/CenterContainer/HBoxContainer/Lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Raws/VBoxContainer/Panorama" to="." method="_on_panorama_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Raws/VBoxContainer/Back" to="." method="_on_back_pressed"]
